club premier inital draft with all content

--- a/src/pages/club-premier-guide/club-premier-guide.html
+++ b/src/pages/club-premier-guide/club-premier-guide.html
@@ -6,12 +6,34 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Club Premier Classification</ion-title>
+    <ion-title>Club Premier Guide</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <img src="../../assets/imgs/club-premier-platinum.png">
-  <img src="../../assets/imgs/club-premier-gold.png">
-  <img src="../../assets/imgs/club-premier-silver.png">
-  <img src="../../assets/imgs/club-premier-blue.png">
+  <p>A revenue-based loyalty programme by Tradeking's.</p>
+  <p>A wealth of premium benefits and big rewards await you as a valued member of our programme.</p>
+  <p>Once you are registered, you will receive a brief current status of your account. All changes within the programme and a range of great promotional offers that you can benefit from.</p>
+  <h3>How to Earn</h3>
+  <p>Tradekings Currency - How to Earn
+
+      Earn Tradekings Currency on Achieving the Target for the quarter (Value Base Targets given every month for Wholesale Reward Program). Tradekings Currency is Total of Multipliers and Points you earn your on every purchase with Tradekings. Oppotunity to earn extra TK Currency by purchasing FOCUSED and SPECIAL FOCUSED PRODUCTS.</p>
+  <div class="steps">
+    <img src="../../assets/imgs/step1.jpg" alt="step1">    
+    <img src="../../assets/imgs/step2.jpg" alt="step2">
+    <img src="../../assets/imgs/step3.jpg" alt="step3">
+  </div>
+
+  <ul class="check">
+    <li>
+      Diamond/ Gogo/ Hippo 0.50 Points on Purchase on each Unit/ Case
+    </li>
+    <li>
+      Booster schemes at regular intervals to gain extra currency points.
+    </li>
+  </ul>
+
+  <button ion-button color="secondary" (click)=goToProductList()>Special Products</button>
+  <button ion-button color="secondary" (click)=goToClubClassificationt()>Club Classification</button>  
+  <button ion-button color="secondary" (click)=goToTNC()>Terms and Condition</button>
+  <button ion-button color="secondary" (click)=goToFAQ()>FAQ</button>
 </ion-content>
