--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -138,14 +138,15 @@
     <ion-item *ngFor="let product of cartItems" margin-bottom>
       <ion-row class="acc-label" (click)="expandItem($event)">
         <ion-col>
-          {{product.name}}
+          {{product.name}} - 
+          <span class="bold">{{product.quantity}} item</span>
         </ion-col>
       </ion-row>
       <div id="expandWrapper" class="collapsed">
         <ion-row>
           <ion-col text-center>
             <ion-icon name="cube" color="grey"></ion-icon>
-            <span>{{product.name}}</span>
+            <span>{{product.name}}</span>            
           </ion-col>
         </ion-row>
         <ion-row>
