[Add] Club Premier Page

--- a/src/pages/club-premier-guide/club-premier-guide.html
+++ b/src/pages/club-premier-guide/club-premier-guide.html
@@ -18,9 +18,9 @@
 
       Earn Tradekings Currency on Achieving the Target for the quarter (Value Base Targets given every month for Wholesale Reward Program). Tradekings Currency is Total of Multipliers and Points you earn your on every purchase with Tradekings. Oppotunity to earn extra TK Currency by purchasing FOCUSED and SPECIAL FOCUSED PRODUCTS.</p>
   <div class="steps">
-    <img src="../../assets/imgs/step1.jpg" alt="step1">    
-    <img src="../../assets/imgs/step2.jpg" alt="step2">
-    <img src="../../assets/imgs/step3.jpg" alt="step3">
+    <img src="assets/imgs/step1.jpg" alt="step1">
+    <img src="assets/imgs/step2.jpg" alt="step2">
+    <img src="assets/imgs/step3.jpg" alt="step3">
   </div>
 
   <ul class="check">
@@ -32,8 +32,8 @@
     </li>
   </ul>
 
-  <button ion-button color="secondary" (click)=goToProductList()>Special Products</button>
-  <button ion-button color="secondary" (click)=goToClubClassificationt()>Club Classification</button>  
-  <button ion-button color="secondary" (click)=goToTNC()>Terms and Condition</button>
-  <button ion-button color="secondary" (click)=goToFAQ()>FAQ</button>
+  <button ion-button color="secondary" (click)="goToProductList()">Special Products</button>
+  <button ion-button color="secondary" (click)="goToClubClassificationt()">Club Classification</button>
+  <button ion-button color="secondary" (click)="goToTNC()">Terms and Condition</button>
+  <button ion-button color="secondary" (click)="goToFAQ()">FAQ</button>
 </ion-content>
