--- a/src/pages/club-classification/club-classification.html
+++ b/src/pages/club-classification/club-classification.html
@@ -12,10 +12,10 @@
 
 <ion-content padding>
   <div class="cards">
-    <img src="../../assets/imgs/club-premier-platinum.png">
-    <img src="../../assets/imgs/club-premier-gold.png">
-    <img src="../../assets/imgs/club-premier-silver.png">
-    <img src="../../assets/imgs/club-premier-blue.png">
+    <img src="assets/imgs/club-premier-platinum.png">
+    <img src="assets/imgs/club-premier-gold.png">
+    <img src="assets/imgs/club-premier-silver.png">
+    <img src="assets/imgs/club-premier-blue.png">
   </div>
   <h2>Tier Status & Benefits</h2>
   <p>As a valued Tradekings Club Premier , you are able to improve your Tier status, based on your business volume. Your
