--- a/src/pages/gift-rewards/gift-rewards.html
+++ b/src/pages/gift-rewards/gift-rewards.html
@@ -15,7 +15,14 @@
     <ion-list>
       <ion-card *ngFor="let product of giftProducts">
         <ion-card-content>
+          <ion-row>
+          <ion-col size="10">
           {{ product.name }}
+          </ion-col>
+            <ion-col size="2">
+              <button ion-button right (click)="addItemToGiftCart(product)">Add</button>
+            </ion-col>
+          </ion-row>
         </ion-card-content>
       </ion-card>
     </ion-list>
