--- a/src/pages/gift-rewards/gift-rewards.html
+++ b/src/pages/gift-rewards/gift-rewards.html
@@ -16,6 +16,9 @@
       <ion-card *ngFor="let product of giftProducts">
         <ion-card-content>
           <ion-row>
+            <ion-col size="6">
+              <img src="../../assets/imgs/gifts/fortuner.png" />
+            </ion-col>
           <ion-col size="10">
           {{ product.name }}
           </ion-col>
@@ -27,3 +30,10 @@
       </ion-card>
     </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-row (click)="moveToGiftCheckoutPage()">
+    <ion-col>
+      <ion-label text-center>Checkout</ion-label>
+    </ion-col>
+  </ion-row>
+</ion-footer>
