--- a/src/pages/gift-rewards/gift-rewards.html
+++ b/src/pages/gift-rewards/gift-rewards.html
@@ -19,21 +19,37 @@
             <ion-col size="6">
               <img src="../../assets/imgs/gifts/fortuner.png" />
             </ion-col>
-          <ion-col size="10">
-          {{ product.name }}
-          </ion-col>
-            <ion-col size="2">
-              <button ion-button right (click)="addItemToGiftCart(product)">Add</button>
+            <ion-col size="6">
+              <ion-row>
+                <ion-col size="12" class="prod-name">
+                  {{ product.name }}
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  {{ product.brand }}
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  {{ product.tkCurrencyValue }} TK Currency
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <button ion-button right (click)="addItemToGiftCart(product)" color="secondary">Add</button>
+                </ion-col>
+              </ion-row>
             </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
     </ion-list>
-</ion-content>
-<ion-footer>
-  <ion-row (click)="moveToGiftCheckoutPage()">
-    <ion-col>
-      <ion-label text-center>Checkout</ion-label>
-    </ion-col>
-  </ion-row>
-</ion-footer>
+  </ion-content>
+  <ion-footer>
+    <ion-row>
+      <ion-col text-center  class="checkout" (click)="moveToGiftCheckoutPage()">
+          Checkout
+      </ion-col>
+    </ion-row>
+  </ion-footer>
