--- a/src/pages/gift-rewards/gift-rewards.html
+++ b/src/pages/gift-rewards/gift-rewards.html
@@ -16,8 +16,8 @@
       <ion-card *ngFor="let product of giftProducts">
         <ion-card-content>
           <ion-row>
-            <ion-col size="6">
-              <img src="../../assets/imgs/gifts/fortuner.png" />
+            <ion-col class="gift-img" size="6">
+              <img class="gift-image" src="./assets/imgs/giftartilces/{{product.imageUrl}}"/>
             </ion-col>
             <ion-col size="6">
               <ion-row>
@@ -48,8 +48,9 @@
   </ion-content>
   <ion-footer>
     <ion-row>
-      <ion-col text-center  class="checkout" (click)="moveToGiftCheckoutPage()">
+      <button ion-button full text-center [disabled]="(giftProductsCart.length < 1)"
+                  class="checkout" (click)="moveToGiftCheckoutPage()">
           Checkout
-      </ion-col>
+      </button>
     </ion-row>
   </ion-footer>
