--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -15,6 +15,15 @@
 
 <ion-content padding>
   <ion-item>
-    <button full large ion-button (click)="startSchedular()">Start Schedular</button>
+    <button full large ion-button (click)="updateProductInMongo()">Update Proudct</button>
+  </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="updateProductStatInERP()">Update Product Stat in ERP</button>
+  </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="updateCustomerInMongo()">Update Customer</button>
+  </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="updateCustomerStatInERP()">Update Customer Stat in ERP</button>
   </ion-item>
 </ion-content>
