--- a/src/pages/club-premier/club-premier.html
+++ b/src/pages/club-premier/club-premier.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <ion-card>
+  <ion-card (click)="provideInfo()">
     <ion-card-content>
       Total TK Points: {{ tkPoints }}
       <br/>
