--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -72,6 +72,9 @@
             <ion-col col-12 text-center>
               <ion-icon name="cash" color="grey"></ion-icon> <span>Order Total: {{orderDetail.orderTotal}} ZMW</span>
             </ion-col>
+            <ion-col col-12 text-center>
+              <ion-icon name="trophy" color="grey"></ion-icon> <span>Total Tk-Points: {{orderDetail.totalTkPoints}}</span>
+            </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
@@ -96,6 +99,12 @@
             <ion-col col-12 text-center>
               <ion-icon name="cash" color="grey"></ion-icon>
               <span>SubTotal: {{item.subTotal}} ZMW</span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12 text-center>
+              <ion-icon name="trophy" color="grey"></ion-icon>
+              <span>Tk-Point: {{item.tkPoint}}</span>
             </ion-col>
           </ion-row>
         </ion-card-content>
