card images changed

--- a/src/pages/club-classification/club-classification.html
+++ b/src/pages/club-classification/club-classification.html
@@ -27,9 +27,9 @@
     <li>Points Earned - As per the purchase of number of cases (As per defined points on purchase of each case)</li>
   </ul>
 
-  <div>
+  <div class="card-wrapper">
     <h3>Bronze</h3>
-    <img src="../../assets/imgs/bronze.png" alt="">
+    <img src="../../assets/imgs/bronze-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -52,9 +52,9 @@
       </tr>
     </table>
   </div>
-  <div>
+  <div class="card-wrapper">
     <h3>Silver</h3>
-    <img src="../../assets/imgs/silver.png" alt="">
+    <img src="../../assets/imgs/silver-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -78,9 +78,9 @@
       </tr>
     </table>
   </div>
-  <div>
+  <div class="card-wrapper">
     <h3>Gold</h3>
-    <img src="../../assets/imgs/gold.png" alt="">
+    <img src="../../assets/imgs/gold-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -103,9 +103,9 @@
       </tr>
     </table>
   </div>
-  <div>
+  <div class="card-wrapper">
     <h3>Platinum</h3>
-    <img src="../../assets/imgs/platinum.png" alt="">
+    <img src="../../assets/imgs/platinum-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
