--- a/src/pages/gift-rewards/gift-rewards.html
+++ b/src/pages/gift-rewards/gift-rewards.html
@@ -42,7 +42,7 @@
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col size="12"
+                <ion-col size="12">
                   <button ion-button right (click)="addItemToGiftCart(product)" color="secondary">Add</button>
                 </ion-col>
               </ion-row>
