[Update] Assest path

--- a/src/pages/club-classification/club-classification.html
+++ b/src/pages/club-classification/club-classification.html
@@ -29,7 +29,7 @@
 
   <div class="card-wrapper">
     <h3>Bronze</h3>
-    <img src="../../assets/imgs/bronze-card.jpg" alt="">
+    <img src="assets/imgs/bronze-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -54,7 +54,7 @@
   </div>
   <div class="card-wrapper">
     <h3>Silver</h3>
-    <img src="../../assets/imgs/silver-card.jpg" alt="">
+    <img src="assets/imgs/silver-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -80,7 +80,7 @@
   </div>
   <div class="card-wrapper">
     <h3>Gold</h3>
-    <img src="../../assets/imgs/gold-card.jpg" alt="">
+    <img src="assets/imgs/gold-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
@@ -105,7 +105,7 @@
   </div>
   <div class="card-wrapper">
     <h3>Platinum</h3>
-    <img src="../../assets/imgs/platinum-card.jpg" alt="">
+    <img src="assets/imgs/platinum-card.jpg" alt="">
     <table>
       <tr>
         <th>How to Qualify</th>
