[Release-1.2](Developer Zone) create new customer to mongo

--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -26,4 +26,7 @@
   <ion-item>
     <button full large ion-button (click)="updateCustomerStatInERP()">Update Customer Stat in ERP</button>
   </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="createNewCustomerInMongo()">Create New Customer in Mongo</button>
+  </ion-item>
 </ion-content>
