--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,18 +1,64 @@
-<!--
-  Generated template for the UserProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Profile</ion-title>
-  </ion-navbar>
+  <ion-navbar hideBackButton="true">
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Profile</ion-title>
+      <ion-buttons end>
+        <button ion-button icon-only>
+          <ion-icon name="more"></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
 
 </ion-header>
 
+<ion-content class="full-background">
 
-<ion-content padding>
+<ion-card class="profile-card">
+
+  <ion-card-header>
+    <ion-item class="profile-header">
+      <ion-avatar item-start>
+        <img src="assets/icon/profile.svg">
+      </ion-avatar>
+      <ion-item>
+        User Details
+      </ion-item>
+    </ion-item>
+
+
+  </ion-card-header>
+
+  <ion-card-content>
+    <!-- Add card content here! -->
+  </ion-card-content>
+
+  <ion-list>
+
+    <ion-item class="profile-item" padding>
+      <ion-icon name="md-cash" item-start></ion-icon>
+      TK Points: 100
+    </ion-item>
+
+    <ion-item class="profile-item" padding>
+      <ion-icon name="md-cash" item-start></ion-icon>
+      TK Currency: 200
+    </ion-item>
+
+    <ion-item class="profile-item" padding>
+      <ion-icon name="md-cash" item-start></ion-icon>
+      TK Super Cash: 5678
+    </ion-item>
+
+    <ion-item class="profile-item" padding>
+      <ion-icon name="md-cash" item-start></ion-icon>
+      TK Reward Points: 1000
+    </ion-item>
+
+  </ion-list>
+
+</ion-card>
 
 </ion-content>
