Added Target vs Achievment (Bar) Graph

--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -57,6 +57,17 @@
       TK Reward Points: 1000
     </ion-item>
 
+    <ion-item class="profile-expand" padding>
+      <button ion-item (click)="openGraph()">
+        <ion-icon name="trophy" item-start></ion-icon>
+        Target vs Achievement
+        <ion-icon name="arrow-dropdown" item-end></ion-icon>
+      </button>
+      <!-- <ion-icon name="md-cash" item-start></ion-icon>
+      Target vs Achievement -->
+    </ion-item>
+
+
   </ion-list>
 
 </ion-card>
