Added Pages for Profile Tabs

--- a/src/pages/target-graph/target-graph.html
+++ b/src/pages/target-graph/target-graph.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-
+<ion-card class="target-graph-card" padding>
 <div>
   <div>
     <div style="display: block">
@@ -29,5 +29,6 @@
     </div>
   </div>
 </div>
+</ion-card>
 
 </ion-content>
