--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -29,4 +29,7 @@
   <ion-item>
     <button full large ion-button (click)="createNewCustomerInMongo()">Create New Customer in Mongo</button>
   </ion-item>
+  <ion-item>
+    <button full large ion-button (click)="createNewProductInMongo()">Create New Product in Mongo</button>
+  </ion-item>
 </ion-content>
