--- a/src/pages/add-salesman-modal/add-salesman-modal.html
+++ b/src/pages/add-salesman-modal/add-salesman-modal.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar>
+      <button ion-button>
+          <ion-icon name="close" (click)="dismissModal()"></ion-icon>
+        </button>
   </ion-navbar>
   <ion-toolbar>
     <ion-searchbar #q (ionChange)="searchProducts(q.value)" placeholder="Search Salesman"></ion-searchbar>
@@ -11,7 +14,7 @@
           <ion-card-content>
             <ion-row>
               <ion-col text-center>
-                  <span>{{salesman.name}}</span>
+                  <span class="salesman-name">{{salesman.name}}</span>
               </ion-col>
             </ion-row>
            </ion-card-content>
