--- a/src/pages/edit-user/edit-user.html
+++ b/src/pages/edit-user/edit-user.html
@@ -67,8 +67,18 @@
           <p class="error" *ngIf="channel.hasError('required') && channel.touched">
             *Channel is required
           </p> -->
-            <ion-label class="custom-title">Associated Salesman</ion-label>
-            <button ion-button color="secondary" (click)="addSalesman()" style="float: right"><ion-icon name="add"></ion-icon>Add</button>
+          <ion-grid>
+            <ion-row class='associated-salesman'>
+                <ion-col col-8>
+                    <ion-label class="custom-title">Associated Salesman </ion-label>
+                </ion-col>
+                <ion-col col-4>
+                    <button ion-button color="secondary" (click)="addSalesman()" style="float: right"><ion-icon name="add"></ion-icon>Add</button>
+                </ion-col>
+            </ion-row>
+          </ion-grid>
+            
+            
             <!-- <button ion-button color="primary" *ngFor="let salesman of salesmanList">{{salesman.name}}</button> -->
 
             <!-- =====Show only when Salesman Association list is empty===== -->
