--- a/src/pages/add-salesman-modal/add-salesman-modal.html
+++ b/src/pages/add-salesman-modal/add-salesman-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
       <button ion-button>
-          <ion-icon name="close" (click)="dismissModal()"></ion-icon>
+          <ion-icon name="close-circle" (click)="dismissModal()"></ion-icon>
         </button>
   </ion-navbar>
   <ion-toolbar>
@@ -11,13 +11,14 @@
 <ion-content>
     <ion-list>
         <ion-card *ngFor="let salesman of filteredSalesmanList" (click)="addSalesMan(salesman)">
-          <ion-card-content>
-            <ion-row>
-              <ion-col text-center>
-                  <span class="salesman-name">{{salesman.name}}</span>
-              </ion-col>
-            </ion-row>
-           </ion-card-content>
-           </ion-card>
+           <ion-card-content>
+              <ion-row>
+                  <ion-col>
+                      <ion-icon name="star"></ion-icon>
+                      <span class="salesman-name">{{salesman.name}}</span>
+                  </ion-col>
+                </ion-row>
+             </ion-card-content>
+             </ion-card>
            </ion-list> 
 </ion-content>
