Updated: Added Payment Button & Modal

--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -185,6 +185,11 @@
 
   <!-- </ion-list> -->
 
+  <button ion-button round padding class="paymentBtn" (click)="openPaymentModal()">
+      <ion-icon name="cash"></ion-icon>
+      Add Payment
+  </button>
+
 
 
 </ion-content>
