Updated: Minor UI Changes

--- a/src/pages/add-payment-modal/add-payment-modal.html
+++ b/src/pages/add-payment-modal/add-payment-modal.html
@@ -46,7 +46,7 @@
         </ion-item>
 
     <div id="modalBtn">
-      <button ion-button round padding center [disabled]="!isEnabled" (click)="submitPayment()">
+      <button ion-button padding center [disabled]="!isEnabled" (click)="submitPayment()">
           <ion-icon name="checkmark-circle"></ion-icon>
           Add Payment
       </button>
