--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -185,7 +185,7 @@
 
   <!-- </ion-list> -->
 
-  <button ion-button round padding class="paymentBtn" (click)="openPaymentModal()">
+  <button ion-button padding class="paymentBtn" (click)="openPaymentModal()">
       <ion-icon name="cash"></ion-icon>
       Add Payment
   </button>
