--- a/src/pages/add-salesman-modal/add-salesman-modal.html
+++ b/src/pages/add-salesman-modal/add-salesman-modal.html
@@ -1,24 +1,35 @@
 <ion-header>
   <ion-navbar>
-      <button ion-button>
-          <ion-icon name="close-circle" (click)="dismissModal()"></ion-icon>
-        </button>
+    <!-- <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button> -->
+    <ion-title>Salesman List</ion-title>
   </ion-navbar>
   <ion-toolbar>
-    <ion-searchbar #q (ionChange)="searchProducts(q.value)" placeholder="Search Salesman"></ion-searchbar>
+    <ion-searchbar  #q (ionChange)="searchSalesman(q.value)" placeholder="Add Salesman"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-    <ion-list>
-        <ion-card *ngFor="let salesman of filteredSalesmanList" (click)="addSalesMan(salesman)">
-           <ion-card-content>
-              <ion-row>
-                  <ion-col>
-                      <ion-icon name="star"></ion-icon>
-                      <span class="salesman-name">{{salesman.name}}</span>
-                  </ion-col>
-                </ion-row>
-             </ion-card-content>
-             </ion-card>
-           </ion-list> 
+
+<ion-content class="full-background">
+  <!-- <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher> -->
+  <ion-list *ngIf="salesmanList && (salesmanList.length > 0)">
+    <ion-item *ngFor="let salesman of filteredSalesmanList" (click)="addSalesMan(salesman)">
+      <span>{{salesman.externalId}}</span><span>{{salesman.name}}</span>
+      <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="arrow-forward"></ion-icon></h1></button> -->
+      <button ion-button clear color="secondary" item-end>
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-item>
+  </ion-list>
+  <ion-card *ngIf="salesmanList && (salesmanList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
+  <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll> -->
 </ion-content>
+
