--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -134,6 +134,13 @@
           <p class="error" *ngIf="password.hasError('required') && password.touched">
             *Password is required
           </p>
+          <ion-item>
+            <ion-label floating>Customer Code</ion-label>
+            <ion-input type="text" formControlName="externalId"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="externalId.hasError('required') && externalId.touched">
+            *Customer code is required
+          </p>
           <ion-grid>
             <button ion-button color="secondary" [disabled]="!(addSalesmanForm.controls.name.valid && addSalesmanForm.controls.userLoginId.valid && addSalesmanForm.controls.password.valid)"
               (click)="createUser('salesman');">Add Salesman<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
