--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -4,7 +4,7 @@
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
-      <ion-title>Profile</ion-title>
+      <ion-title>Dashboard</ion-title>
       <ion-buttons end>
         <button ion-button icon-only (click)="presentPopover($event)">
           <ion-icon name="more" ></ion-icon>
@@ -27,8 +27,6 @@
         User Details
       </ion-item>
     </ion-item>
-
-
   </ion-card-header>
 </ion-card>
   <!-- <ion-list> -->
