--- a/src/pages/salesman-dashboard/salesman-dashboard.html
+++ b/src/pages/salesman-dashboard/salesman-dashboard.html
@@ -44,7 +44,7 @@
             </ion-select> 
           </ion-item>
       </ion-card-header>
-      
+      <div>
           <ion-row>
             <ion-col class="tabs" align-items-center>
                 <p class="tab-label-sm" align-items-center>
@@ -82,13 +82,25 @@
                   </p>
               </ion-col>
             </ion-row>
+          </div>
+          <div>
+            <ion-row>
+              <div>
+                  <canvas #pieCanvas style="width: 100%"> </canvas>
+              </div>
+            </ion-row>
+          </div>
 
             <ion-row class="targetBottom">
               <p class="targetFootnote">*MTD: Month Till Date</p>
-              <p class="toggleView" (click)="toggleView()">
+              <!-- <p class="toggleView" (click)="toggleView()" [ngClass]=" showChart ? 'item-hidden': 'item-visible'">
                   <ion-icon slot="start" name="podium"></ion-icon>
                 Visualize Data
               </p>
+              <p class="toggleView" (click)="toggleView()" [ngClass]=" showChart ? 'item-visible': 'item-hidden'">
+                  <ion-icon slot="start" name="podium"></ion-icon>
+                Textual Data
+              </p> -->
             </ion-row>
   </ion-card>
 
