--- a/src/pages/add-salesman-modal/add-salesman-modal.html
+++ b/src/pages/add-salesman-modal/add-salesman-modal.html
@@ -4,6 +4,9 @@
       <ion-icon name="menu"></ion-icon>
     </button> -->
     <ion-title>Salesman List</ion-title>
+    <ion-buttons end>
+        <button ion-button (click)="dismissModal()"><ion-icon name="close-circle"></ion-icon>Close</button>
+      </ion-buttons>
   </ion-navbar>
   <ion-toolbar>
     <ion-searchbar  #q (ionChange)="searchSalesman(q.value)" placeholder="Add Salesman"></ion-searchbar>
