--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,5 +1,4 @@
 <ion-header>
-
   <ion-navbar hideBackButton="true">
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
@@ -11,7 +10,6 @@
         </button>
       </ion-buttons>
     </ion-navbar>
-
 </ion-header>
 
 <ion-content class="full-background">
@@ -20,12 +18,12 @@
       {{btnLabel}}
   </button> -->
 
-  <button ion-button  padding class="customerdashboardBtn" (click)="openPaymentModal()">
+  <!-- <button ion-button  padding class="customerdashboardBtn" (click)="openPaymentModal()">
     Add Payment
   </button>
   <button ion-button  padding class="customerdashboardBtn" (click)="openShopPage()">
     Shop
-  </button>
+  </button> -->
 
   <ion-card class="tabs-wrapper">
       <ion-card-header class="card-title">
@@ -305,6 +303,8 @@
       Add Payment
   </button> -->
 
-
-
 </ion-content>
+<ion-footer>
+  <button ion-button  padding class="customerdashboardBtn" (click)="openPaymentModal()">Add Payment</button>
+  <button ion-button  padding class="customerdashboardBtn" (click)="openShopPage()">Shop</button>
+</ion-footer>
